# Platform

./: .gitignore
inc/: public_typedef.h
inc/public_func/: public_macro.h  public_typedef.h  string_public_func.h
inc/publlic_func/: public_macro.h  string_public_func.h
os_cfg/Linux/cmake/: toolchain.cmake
os_cfg/MacOS/cmake/: toolchain.cmake
os_cfg/Windows/cmake/: toolchain.cmake
os_cfg/public/script/: download_Platform.sh
script/: cmake_build.sh  cmake_cfg_build.sh  cmake_clean.sh  cmake_run.sh  copy_sys_cfg_files.sh  copy_upadte_files.sh  create_config_file.sh  init_env.sh  move_sys_cfg_file.sh  public_config.sh  public_shell_func.sh
template/: .gitignore  CMakeLists.txt  download_Platform.sh  tasks.json
template/script/: download_Platform.sh
update/script/: download_Platform.sh
